Improve button accessibility UX

--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -8,7 +8,7 @@
     outline-offset: calc(-1 * var(--focus-outline-size));
     cursor: pointer;
 
-    &:focus {
+    &:focus-visible {
         outline-style: solid;
     }
 
