Import screen sizes in settings modal styles

--- a/src/routes/Settings/General/General.less
+++ b/src/routes/Settings/General/General.less
@@ -2,6 +2,8 @@
     option-icon: icon;
 }
 
+@import (reference) '~stremio/common/screen-sizes.less';
+
 :import('~stremio/components/ModalDialog/styles.less') {
     modal-dialog-container: modal-dialog-container;
     modal-dialog-content: modal-dialog-content;
